--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -5,7 +5,7 @@ ion-header, ion-content {
 .container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 
   overflow: hidden;
@@ -17,4 +17,11 @@ ion-header, ion-content {
     text-align: center;
     font-family: "Roboto", sans-serif;
     color: #525252;
+}
+
+.control {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
