--- a/src/app/home/btn-toogle/btn-toogle.component.html
+++ b/src/app/home/btn-toogle/btn-toogle.component.html
@@ -1,7 +1,8 @@
 <label class="label">
   <div class="toggle">
-    <input class="toggle-state" type="checkbox" name="check" value="check" [(ngModel)]="value" />
-    <div class="indicator"></div>
+    <input class="toggle-state" type="checkbox" name="check" value="check"
+      [(ngModel)]="value"/>
+    <div class="indicator" [ngClass]="{'indicator-true': value}"></div>
   </div>
   <div class="label-text">{{label}}</div>
 </label>
