--- a/src/app/home/btn-toogle/btn-toogle.component.scss
+++ b/src/app/home/btn-toogle/btn-toogle.component.scss
@@ -38,6 +38,10 @@
         -8px -4px 8px 0px #ffffff,
         8px 4px 12px 0px #d1d9e6;
 }
+
+.indicator-true {
+    background: #d2e9b3;
+}
     
 .toggle-state:checked ~ .indicator {
     transform: translate3d(25%, 0, 0);
