Revertendo a velocidade quando necessário

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -8,7 +8,7 @@
     <div class="control">
       <analog-controller
         [(ngModel)]="angle"
-        (ngModelChange)="saveCommand()">
+        (ngModelChange)="reverseVelocityIfNeed(); saveCommand()">
       </analog-controller>
     </div>
 
